Regression: Poly Build does not update snapped geometry #115510

Closed
opened 2023-11-28 10:07:27 +01:00 by Grigoriy Titaev · 5 comments

System Information
Operating system: Windows 10

Blender Version
Broken: 4.0.1, 4.1.0 Alfa (2023-11-28)
Worked: 3.6.5

Caused by 91b27ab637

Short description of error
Poly Build Tool not working properly after move vertexes.

Exact steps for others to reproduce the error

  1. Open test file: Poly Build.blend
  2. Move Vertexes
  3. Poly Build shows Edges/Vertexes at old positions

Poly Build.png

**System Information** Operating system: Windows 10 **Blender Version** Broken: 4.0.1, 4.1.0 Alfa (2023-11-28) Worked: 3.6.5 Caused by 91b27ab637 **Short description of error** Poly Build Tool not working properly after move vertexes. **Exact steps for others to reproduce the error** 1. Open test file: [Poly Build.blend](/attachments/ea126bfc-c46e-476a-a991-4a40891d46a9) 2. Move Vertexes 3. Poly Build shows Edges/Vertexes at old positions ![Poly Build.png](/attachments/edab6a4f-323c-4c85-8d71-baa55f98186f)
Grigoriy Titaev added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-28 10:07:27 +01:00

Thank you for the report, @gtitaev.

I can confirm the issue. It seems to be a regression.
I will try to find the commit that has introduced the issue.

Thank you for the report, @gtitaev. I can confirm the issue. It seems to be a regression. I will try to find the commit that has introduced the issue.

Caused by 91b27ab637 (Refactor: Simplify mesh edit mode modifier evaluation)

Some coordinate update seems to be missing in source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc

@HooglyBoogly ^

Caused by 91b27ab637 (Refactor: Simplify mesh edit mode modifier evaluation) Some coordinate update seems to be missing in source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc @HooglyBoogly ^
Germano Cavalcante changed title from Bug in Poly Build Tool in Blender 4.x to Regression: Poly Build does not update snapped geometry 2023-11-28 22:19:09 +01:00
Hans Goudey self-assigned this 2023-11-28 22:28:23 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-12-22 14:58:16 +01:00
Member

I looked into this for a while and didn't find the problem yet.

Also, I can only seems to reproduce the issue until I add some geometry with the tool, then it doesn't happen anymore.

I looked into this for a while and didn't find the problem yet. Also, I can only seems to reproduce the issue until I add some geometry with the tool, then it doesn't happen anymore.

@HooglyBoogly, it looks like that commit only revealed the previous error-prone code.
Apparently, both the drawing and the selection are using the wrong Mesh to access the coordinates.

I tested this change and it seems to work. But maybe we don't even need to use DEG_get_evaluated_object here.

diff --git a/source/blender/editors/mesh/editmesh_select.cc b/source/blender/editors/mesh/editmesh_select.cc
index 28fcbfc9934..dc0f3a11e64 100644
--- a/source/blender/editors/mesh/editmesh_select.cc
+++ b/source/blender/editors/mesh/editmesh_select.cc
@@ -1082,8 +1082,8 @@ bool EDBM_unified_findnearest_from_raycast(ViewContext *vc,
 
       const float(*coords)[3] = nullptr;
       {
-        Mesh *me_eval = (Mesh *)DEG_get_evaluated_id(vc->depsgraph,
-                                                     static_cast<ID *>(obedit->data));
+        Object *obedit_eval = DEG_get_evaluated_object(vc->depsgraph, base_iter->object);
+        Mesh *me_eval = (Mesh *)obedit_eval->data;
         if (BKE_mesh_wrapper_vert_len(me_eval) == bm->totvert) {
           coords = BKE_mesh_wrapper_vert_coords(me_eval);
         }
diff --git a/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc b/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc
index 06f124537c6..1cb29f0dc7c 100644
--- a/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc
+++ b/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc
@@ -239,7 +239,8 @@ static int gizmo_preselect_elem_test_select(bContext *C, wmGizmo *gz, const int
     {
       Object *ob = gz_ele->bases[gz_ele->base_index]->object;
       Depsgraph *depsgraph = CTX_data_ensure_evaluated_depsgraph(C);
-      Mesh *me_eval = (Mesh *)DEG_get_evaluated_id(depsgraph, static_cast<ID *>(ob->data));
+      Object *ob_eval = DEG_get_evaluated_object(depsgraph, ob);
+      Mesh *me_eval = (Mesh *)ob_eval->data;
       if (BKE_mesh_wrapper_vert_len(me_eval) == bm->totvert) {
         coords = BKE_mesh_wrapper_vert_coords(me_eval);
       }

@HooglyBoogly, it looks like that commit only revealed the previous error-prone code. Apparently, both the drawing and the selection are using the wrong Mesh to access the coordinates. I tested this change and it seems to work. But maybe we don't even need to use `DEG_get_evaluated_object` here. ```diff diff --git a/source/blender/editors/mesh/editmesh_select.cc b/source/blender/editors/mesh/editmesh_select.cc index 28fcbfc9934..dc0f3a11e64 100644 --- a/source/blender/editors/mesh/editmesh_select.cc +++ b/source/blender/editors/mesh/editmesh_select.cc @@ -1082,8 +1082,8 @@ bool EDBM_unified_findnearest_from_raycast(ViewContext *vc, const float(*coords)[3] = nullptr; { - Mesh *me_eval = (Mesh *)DEG_get_evaluated_id(vc->depsgraph, - static_cast<ID *>(obedit->data)); + Object *obedit_eval = DEG_get_evaluated_object(vc->depsgraph, base_iter->object); + Mesh *me_eval = (Mesh *)obedit_eval->data; if (BKE_mesh_wrapper_vert_len(me_eval) == bm->totvert) { coords = BKE_mesh_wrapper_vert_coords(me_eval); } diff --git a/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc b/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc index 06f124537c6..1cb29f0dc7c 100644 --- a/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc +++ b/source/blender/editors/space_view3d/view3d_gizmo_preselect_type.cc @@ -239,7 +239,8 @@ static int gizmo_preselect_elem_test_select(bContext *C, wmGizmo *gz, const int { Object *ob = gz_ele->bases[gz_ele->base_index]->object; Depsgraph *depsgraph = CTX_data_ensure_evaluated_depsgraph(C); - Mesh *me_eval = (Mesh *)DEG_get_evaluated_id(depsgraph, static_cast<ID *>(ob->data)); + Object *ob_eval = DEG_get_evaluated_object(depsgraph, ob); + Mesh *me_eval = (Mesh *)ob_eval->data; if (BKE_mesh_wrapper_vert_len(me_eval) == bm->totvert) { coords = BKE_mesh_wrapper_vert_coords(me_eval); } ```
Member

Huh, nice! I tried using evaluated coordinates in more places but I didn't get the chance to check if they were correct yet.

A combination of DEG_get_evaluated_object and BKE_object_get_evaluated_mesh sounds nice to me, to avoid relying on the Object::data pointer. If you want to commit that, go ahead, otherwise I'll take a look a bit later.

Huh, nice! I tried using evaluated coordinates in more places but I didn't get the chance to check if they were correct yet. A combination of `DEG_get_evaluated_object` and `BKE_object_get_evaluated_mesh` sounds nice to me, to avoid relying on the `Object::data` pointer. If you want to commit that, go ahead, otherwise I'll take a look a bit later.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-26 14:53:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115510
No description provided.