Fix #115510: Poly Build does not update snapped geometry

Commit 91b27ab637 reveals the error.

The Poly Build code was using the wrong mesh to access the evaluated
coordinates.

It was accessing the original mesh, which wasn't affected by modifiers
or editing.

The most ideal meshes would be either the cage or even the deform, as
these better correspond to the geometry seen by the user.